app/assets/stylesheets/listings.css.scss
// Place all the styles related to the listings controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

input#listing_title {
  width: 99%;
  font-size: 15px;
}

section.top-info {
  margin: 30px 0;
}

section.pics {
  display: block;
  width: 448px;
  border: 6px solid #333333;
  border-bottom: 6px solid #333333;
  border-top: 6px solid #333333;
  float: left;
  overflow: hidden;
}

section.top-info > section.pics > div.main-pic {
  width: 428px;
  padding: 10px 10px 10px 10px;
  border-bottom: 1px solid #333333;
}

div.main-pic > img {
  width: 100%;
  height: auto;
  display: block;
}

img.car-pic:hover {
  cursor: pointer;
}

section.pics > ul.thumbs {
//  margin: 4px;
  list-style: none;
  display: block;
  margin: 8px;
}

ul.thumbs > li {
  display: block;
  float: left;
  padding: 2px;
  width: 50px;
  height: 50px;
}

ul.thumbs > li > img {
  width: 100%;
  height: 100%;
}

div.image-file-input-wrapper {
  width: 100%;
  height: auto;
  position: relative;
}

div.image-file-input-wrapper > img {
  width: 100%;
  height: auto;
  display: block;
}

ul.thumbs div.image-file-input-wrapper > img {
  height: 50px;
}

div.image-file-input-wrapper > input[type="file"] {
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  opacity: 0;
}

div.image-file-input-wrapper > input[type="file"]:hover {
 cursor: pointer;
}

div.image-file-input-wrapper > .remove {
  position: absolute;
  display: block;
  width: 15%;
  height: 15%;
  top: -5px;
  right: -5px;
  background: black;
  z-index: 5;
}

div.image-file-input-wrapper > .progress {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.7);
  color: red;
  text-align: center;
  display: none;
  z-index: 3;
}

div.image-file-input-wrapper.busy > .progress {
  display: block;
}

div.image-file-input-wrapper > img.spinner {
  position: absolute;
  top: 0;
  left: 0;
  display: none;
  width: 100%;
  height: 100%;
  z-index: 2;
}

div.image-file-input-wrapper.prepping > img.spinner {
  display: block;
}

ul.thumbs .progress {
  line-height: 10px;
}

.main-pic .progress {
  font-size: 30px;
  line-height: 300px;
}





ul.thumbs > li > div {
  display: block;

}

section.info {
  display: block;
  float: left;
  margin: 0 0 0 50px;
  width: 290px;
}

section.info > article > header {
  font-size: 25px;
  font-weight: normal;
}

section.info > article > ul {
  margin-left: 20px;
}

section.info > article > ul > li label {
  display: inline-block;
  width: 80%;
//  margin: 0 15px 0 0;
  text-align: left;
  font-weight: 900;
  float: left;
}

section.info > article > ul > li input[type="radio"] {
  float: left;
}

section.info > article > ul > li span {
  display: block;
  float: left;
  clear: both;
  margin-left: 50px;
  width: 200px;
}

section.description {
  margin: 20px 0 0 0;
  display: block;
  clear: both;
}

section.description textarea#listing_description {
  width: 99%;
  font-size: 15px;
}

div.lightbox {
  position: fixed;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.85);
  z-index: 10;
  display: none;
  overflow-y: scroll;
}

div.lightbox.show {
  display: block;
}

div.lightbox > div.viewport {
  z-index: 1;
  margin: 100px auto;
  width: 600px;
  overflow: hidden;
  position: relative;
  box-shadow: 0 0 5px #FFFFFF, 10px 0px 25px #000000, -10px 0px 25px #000000,
                               0px 10px 25px #000000, 0px -10px 25px #000000;
}

div.viewport > div#scroll-viewport-left {
  position: absolute;
  height: 100%;
  width: 50%;
  float: left;
  z-index: 2;
}

div.viewport > div#scroll-viewport-right {
  position: absolute;
  height: 100%;
  width: 50%;
  margin-left: 50%;
  z-index: 2;
}

div.lightbox ul {
  position: relative;
  display: block;
  left: 0;
}

div.lightbox ul > li {
  display: block;
  float: left;
  width: 600px;
}

div.viewport > ul > li > img {
  width: 600px;
  height: auto;
}

